==> wp19991/micropython_01studio/ports/esp32/xpt2046.c <==
#include "mpconfigboard.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "py/obj.h"
#include "py/runtime.h"
#include "esp_system.h"
#include "driver/gpio.h"
#include "driver/spi_master.h"
#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <stdlib.h>
#include <math.h>
#include "py/mphal.h"
#include "lib/utils/pyexec.h"
#include "modtftlcd.h"
#include "modtouch.h"
#include "ILI9341.h"
#include "global.h"
#define XPT2046_AVG 4
#define CMD_X_READ  0xD0
#define CMD_Y_READ  0x90

void xpt2046_init(xpt2046_obj_t *self)
{
    esp_err_t ret;
		
  spi_device_interface_config_t devcfg={
		.clock_speed_hz=self->mhz*1000*1000, //Clock out at DISP_SPI_MHZ MHz
		.mode=0,                             //SPI mode 0
		.spics_io_num=-1,              //CS pin is set manually
		.queue_size=1,
		.pre_cb=NULL,
		.post_cb=NULL,
	};
	
	gpio_set_direction(self->irq, GPIO_MODE_INPUT);
	gpio_set_direction(self->cs, GPIO_MODE_OUTPUT);
	gpio_set_level(self->cs, 1);

	//Attach the touch controller to the SPI bus
	ret=spi_bus_add_device(self->spihost, &devcfg, &self->spi);
	if (ret != ESP_OK){
		mp_raise_ValueError(MP_ERROR_TEXT("xpt2046 Failed adding SPI device"));
	}
	is_init = true;
}

static uint8_t tp_spi_xchg(xpt2046_obj_t *self, uint8_t data_send)
{
	uint8_t data_rec = 0;
	spi_transaction_t t;
	memset(&t, 0, sizeof(t));  //Zero out the transaction
	t.length = 8;              //Length is in bytes, transaction length is in bits.
	t.tx_buffer = &data_send;  //Data
	t.rx_buffer = &data_rec;

	spi_device_queue_trans(self->spi, &t, portMAX_DELAY);

	spi_transaction_t * rt;
	
	spi_device_get_trans_result(self->spi, &rt, portMAX_DELAY);

	return data_rec;
}

static bool xpt2046_read(int16_t *x, int16_t *y)
{
    xpt2046_obj_t *self = g_xpt2046;

    if (!self || (!self->spi))
		{
			nlr_raise(mp_obj_new_exception_msg(
                &mp_type_RuntimeError, 
								MP_ERROR_TEXT("xpt2046 instance needs to be created before callback is called!")));
		}			
    static int16_t last_x = 0;
    static int16_t last_y = 0;
    bool valid = true;
    uint8_t buf;

    uint8_t irq = gpio_get_level(self->irq);

    if(irq == 0) {
        gpio_set_level(self->cs, 0);
        tp_spi_xchg(self, CMD_X_READ);         /*Start x read*/
				
        buf = tp_spi_xchg(self, 0);           /*Read x MSB*/
        *x = buf << 8;
        buf = tp_spi_xchg(self, CMD_Y_READ);  /*Until x LSB converted y command can be sent*/
        *x += buf;
        buf =  tp_spi_xchg(self, 0);   /*Read y MSB*/
        *y = buf << 8;

        buf =  tp_spi_xchg(self, 0);   /*Read y LSB*/
        *y += buf;
        gpio_set_level(self->cs, 1);
        /*Normalize Data*/
        *x = *x >> 3;
        *y = *y >> 3;
        //xpt2046_corr(self, x, y);
        xpt2046_avg(self, x, y);
        last_x = *x;
        last_y = *y;
    } else {
        *x = last_x;
        *y = last_y;
        self->avg_last = 0;
        valid = false;
    }

    return valid;
}

static bool xpt_write_cail(const char *filename, short x_off, short y_off, float x_fac, float y_fac)
{
	mp_obj_t f_new;
	ssize_t res = 0;
	
	mp_obj_t args[2] = {
		mp_obj_new_str(filename, strlen(filename)),
		MP_OBJ_NEW_QSTR(MP_QSTR_wb),
	};
	f_new = mp_vfs_open(MP_ARRAY_SIZE(args), &args[0], (mp_map_t *)&mp_const_empty_map);
	
	res = mp_stream_posix_write(f_new, &x_off, 2);
	res += mp_stream_posix_write(f_new, &y_off, 2);
	res += mp_stream_posix_write(f_new, &x_fac, 4);
	res += mp_stream_posix_write(f_new, &y_fac, 4);
	mp_stream_close(f_new);

	if(res != 12)return 1;
	else return 0;
}

static bool xpt_read_cail(const char *filename, short *x_off, short *y_off, float *x_fac, float *y_fac)
{
	mp_obj_t f_new;
	ssize_t res = 0;

	mp_obj_t args[2] = {
		mp_obj_new_str(filename, strlen(filename)),
		MP_OBJ_NEW_QSTR(MP_QSTR_rb),
	};
	
	f_new = mp_vfs_open(MP_ARRAY_SIZE(args), &args[0], (mp_map_t *)&mp_const_empty_map);

	res = mp_stream_posix_read(f_new, x_off, 2);
	res += mp_stream_posix_read(f_new, y_off, 2);
	res += mp_stream_posix_read(f_new, x_fac, 4);
	res += mp_stream_posix_read(f_new, y_fac, 4);
	mp_stream_close(f_new);

	if(res != 12)return 1;
	else return 0;
}

static bool xpt2046_adjust(const char *filename)
{
	uint8_t temp_dir = lcddev.dir;//dir
	static uint8_t p_cont;
	int16_t x, y;
	int16_t point_buf[4][2];
	lcd_set_dir(1);
	lcd_Fill(0,0,lcddev.width,lcddev.height,WHITE);
	grap_drawStr(&g_lcd, 50, 150, 8*17, 18, 16,"Touch Calibration",RED, WHITE);

cail:
	p_cont = 0;
	grap_drawColorCircle(&g_lcd, 15, 15, 5, RED); //15,15
	grap_drawLine(&g_lcd,5,15,25,15,RED);
	grap_drawLine(&g_lcd,15,5,15,25,RED);
	while(1)
	{
		mp_hal_delay_ms(100);
		if(xpt2046_read(&x, &y)){
			point_buf[p_cont][0] = x;
			point_buf[p_cont][1] = y;
			p_cont++;
			while(!gpio_get_level(XPT_PIN_IRQ));
			switch(p_cont)
			{
				case 1:
					lcd_Fill(0,0,35,30,WHITE);
					mp_hal_delay_ms(100);
					grap_drawColorCircle(&g_lcd, lcddev.width-15, 15, 5, RED); //lcddev.width-15, 15
					grap_drawLine(&g_lcd,lcddev.width-5,15,lcddev.width-25,15,RED);
					grap_drawLine(&g_lcd,lcddev.width-15,5,lcddev.width-15,25,RED);

				break;
				case 2:
					lcd_Fill(lcddev.width-30,0,lcddev.width-5,30,WHITE);
					mp_hal_delay_ms(100);
					grap_drawColorCircle(&g_lcd, lcddev.width-15, lcddev.height-15, 5, RED);//lcddev.width-15, lcddev.height-15
					grap_drawLine(&g_lcd,lcddev.width-5,lcddev.height-15,lcddev.width-25,lcddev.height-15,RED);
					grap_drawLine(&g_lcd,lcddev.width-15,lcddev.height-5,lcddev.width-15,lcddev.height-25,RED);

				break;
				case 3:
					lcd_Fill(lcddev.width-25, lcddev.height-30,lcddev.width-5,lcddev.height-1,WHITE);
					mp_hal_delay_ms(100);
					grap_drawColorCircle(&g_lcd, 15, lcddev.height-15, 5, RED);//15, lcddev.height-15
					grap_drawLine(&g_lcd,5,lcddev.height-15,25,lcddev.height-15,RED);
					grap_drawLine(&g_lcd,15,lcddev.height-5,15,lcddev.height-25,RED);

				break;				
				case 4:
				
					lcd_Fill(5, lcddev.height-30,25,lcddev.height-1,WHITE);

					if(check_valid(point_buf[0][0],point_buf[0][1],point_buf[1][0],point_buf[1][1],
													point_buf[2][0],point_buf[2][1],point_buf[3][0],point_buf[3][1]))
					{
						goto cail;
					}
					xfac=(float)(lcddev.width-30)/(point_buf[1][0] - point_buf[0][0]);
					xoff=(lcddev.width-xfac*(point_buf[1][0]+point_buf[0][0]))/2;

					yfac=(float)(lcddev.height-30)/(point_buf[3][1] - point_buf[0][1]);
					yoff=(lcddev.height-yfac*(point_buf[3][1]+point_buf[0][1]))/2;

					if(abs(xfac)>2||abs(yfac)>2)
					{
						goto cail;
					}
				break;
			}	
		}
		if(p_cont == 4){
			break;
		}
	}
	lcd_set_dir(temp_dir);
	
	lcd_Fill(0,0,lcddev.width,lcddev.height,lcddev.clercolor);
	
	return xpt_write_cail(filename, xoff, yoff, xfac, yfac);
}

STATIC mp_obj_t xpt2046_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *all_args) {

	enum { ARG_portrait };
	static const mp_arg_t allowed_args[] = {
			{ MP_QSTR_portrait, MP_ARG_INT, {.u_int = 1} },
	};
	
	mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
	mp_arg_parse_all_kw_array(n_args, n_kw, all_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

	xpt2046_obj_t *self = m_new_obj(xpt2046_obj_t);
	self->base.type = type;
	
	self->spi = NULL;
	self->mhz = 5;
	self->spihost = g_ILI9341->spihost;
	self->cs 	= XPT_PIN_CS;
	self->irq = XPT_PIN_IRQ;
	
	self->miso 		= LCD_PIN_MISO;
	self->mosi 		= LCD_PIN_MOSI;
	self->clk  		= LCD_PIN_CLK;

	self->x_min = 1000;
	self->y_min = 1000;
	self->x_max = 3200;
	self->y_max = 2000;
	self->x_inv = 0;
	self->y_inv = 0;
	self->xy_swap = 0;
	
	g_xpt2046 = self;
	xpt2046_init(self);

	if(args[0].u_int != 0)
	{
		tp_dev.dir = args[0].u_int;
	}
	
	switch (tp_dev.dir)
	{
		case 2:
		case 4:
		touch_w=320;
		touch_h=240;
		break;
		case 1:
		case 3:
		touch_w=240;
		touch_h=320;
		break;
	}
	tp_dev.type = 3;
	if(check_sys_file("touch_cail")){
		xpt_read_cail("touch_cail", &xoff, &yoff, &xfac, &yfac);
	}else{
		if(xpt2046_adjust("touch_cail")){
			
			mp_raise_ValueError(MP_ERROR_TEXT("xpt2046 adjust error"));
		}
	}

	return MP_OBJ_FROM_PTR(self);
}
